* frontend: правки по мобильной версии

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -77,38 +77,38 @@ body.ui-page
     footer.ui-footer
         .grid.grid--container
             .row.row--xl-center
-                .col.col--xl-2.col--lg-3.col--md-4
+                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--md-left
                     a.ui-logo(href="/")
                         img(src="/images/footer-logo.png")
-                .ui-address.col.col--xl-8.col--lg-6.col--md-4 Г. МОСКВА,  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
-                .col.col--xl-2.col--lg-3.col--md-4.text--xl-right
+                .ui-address.col.col--xl-8.col--lg-6.col--md-4.text--xs-center.text--md-left Г. МОСКВА,  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
+                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--lg-rigth
                     .ui-phone__footer.ui-phone 8 (495) 663 18 81
             .row.row--xl-center
-                .col.col--xl-2.col--lg-3.col--md-4
+                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--md-left
                     .ui-slogan  Производство и продажа#[br] офисных перегородок
                 nav.ui-footer-menu.col.col--xl-8.col--lg-6.col--md-4
-                    .row.row--no-gutters.row--md-space-between
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                    .row.row--no-gutters.row--xs-space-around.row--md-space-between
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Каталог
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Конфигурации
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Сервис
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Проекты
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Цены
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Направления
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") О компании
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Дилерам
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Вопрос-ответ
-                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6
+                        .ui-footer-menu__item.col--xl-auto.col--lg-6.col--md-6.col--xs-12.text--xs-center.text--md-right
                             a.ui-footer-menu__link(href="") Контакты
-                .col.col--xl-2.col--lg-3.col--md-4.text--xl-right
+                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--md-right
                     .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
         .grid.grid--no-gutters
             .row.row--xl-center.row--no-gutters
