--- a/frontend/src/_styles/grid/mixins/helpers.styl
+++ b/frontend/src/_styles/grid/mixins/helpers.styl
@@ -8,6 +8,8 @@ make-row-helpers($breakpoint)
     align-items: flex-end
   .row--{$breakpoint}-space-between
     justify-content space-between
+  .row--{$breakpoint}-space-around
+    justify-content space-around
 
 // Helper for the sorting the first item
 make-col-helpers($breakpoint)
