--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -37,6 +37,12 @@
         padding-top 28px
         padding-bottom 22px
 
+        .ui-input
+            margin-bottom 15px
+
+            @media (min-width: $breakpoints['md'])
+                margin-bottom 0
+
     &__title
         font-size 26px
         line-height 32px
