--- a/frontend/src/catalog/mobile/index.jade
+++ b/frontend/src/catalog/mobile/index.jade
@@ -102,27 +102,30 @@ block content
                                         img.ui-image.ui-image--responsive(src="/images/catalog/mobile/model-main.png", alt="")
                                     .col.col--xl-6.col--no-gutters.col--xs-align-center.ui-product-model__name Модель 1
     
-    .grid.grid--container.ui-catalog-seo
-        .row
-            .col.col--xl-12.ui-catalog-seo__heading
-                h2.ui-heading.ui-heading--lvl4.ui-heading--black Описание
-        .row
-            .col.col--xl-auto.col--md-auto.ui-catalog-seo__text
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-            .col.col--xl-auto.col--md-auto
-                a.ui-icon-button.ui-icon-button--size-lg.ui-icon-button--black
-                    .ui-icon-button__icon 
-                        svg(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", width="16px", height="8px")
-                            path(fill-rule="evenodd",  fill="rgb(249, 249, 249)", d="M8.000,7.998 L-0.001,0.001 L16.000,0.001 L8.000,7.998 Z")
-                    .ui-icon-button__text Смотреть подробнее
+    .grid.grid--container.grid--no-gutters.ui-catalog-seo
+        .row.row--no-gutters
+            .col.col--xl-12
+                .grid.ui-catalog-seo__content
+                    .row.row--no-gutters
+                        .col.col--xl-12.ui-catalog-seo__heading
+                            h2.ui-heading.ui-heading--lvl4.ui-heading--black Описание
+                    .row.row--no-gutters
+                        .col.col--xl-auto.col--md-auto.ui-catalog-seo__text
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                        .col.col--xl-auto.col--md-auto
+                            a.ui-icon-button.ui-icon-button--size-lg.ui-icon-button--black.js-seo-text-toggle
+                                .ui-icon-button__icon 
+                                    svg(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", width="16px", height="8px")
+                                        path(fill-rule="evenodd",  fill="rgb(249, 249, 249)", d="M8.000,7.998 L-0.001,0.001 L16.000,0.001 L8.000,7.998 Z")
+                                .ui-icon-button__text Смотреть подробнее
 
     .ui-price-calculate.grid.grid--container
         .row
