--- a/frontend/src/_styles/grid/mixins/helpers.styl
+++ b/frontend/src/_styles/grid/mixins/helpers.styl
@@ -6,6 +6,10 @@ make-row-helpers($breakpoint)
     align-items: center
   .row--{$breakpoint}-bottom
     align-items: flex-end
+  .row--{$breakpoint}-space-between
+    justify-content space-between
+  .row--{$breakpoint}-space-around
+    justify-content space-around
 
 // Helper for the sorting the first item
 make-col-helpers($breakpoint)
@@ -29,6 +33,12 @@ make-col-helpers($breakpoint)
 
   .col--{$breakpoint}-auto
       flex initial
+      width auto
+
+  .col--{$breakpoint}-no-gutter-right
+      padding-right 0
+  .col--{$breakpoint}-no-gutter-left
+      padding-left 0
 
 // Helper for aligning the text
 make-text-helpers($breakpoint)
