--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -43,7 +43,6 @@ init($breakpoints, $columns)
 *:before,
 *:after
     box-sizing border-box
-    outline 1px dashed green
     margin 0
     padding 0
 
@@ -68,7 +67,7 @@ init($breakpoints, $columns)
     padding-top 15px
     padding-bottom 15px
 
-    @media (min-width: $breakpoints['lg'])
+    @media (min-width: $breakpoints['xl'])
         padding-right 300px
         padding-top 0
         padding-bottom 0
@@ -122,9 +121,12 @@ init($breakpoints, $columns)
     font-family 'Panton'
     font-size 16px
     line-height 32px
+    display flex
+    flex-wrap wrap
 
-    @media (min-width: $breakpoints['lg'])
-        padding-right 40px
+    @media (min-width: $breakpoints['md'])
+        flex-wrap none
+        justify-content space-between
 
     a
         color #050505
@@ -142,8 +144,8 @@ init($breakpoints, $columns)
     &__item + &__item
         margin-left 0
 
-        @media (min-width: $breakpoints['lg'])
-            margin-left 2%
+        @media (min-width: $breakpoints['xl'])
+            margin-left 1.9%
 
 .ui-footer-menu
     font-family 'Panton'
@@ -247,6 +249,10 @@ init($breakpoints, $columns)
 
         &--small
             height 185px
+            margin-top 17px
+
+            @media (min-width: $breakpoints['lg'])
+                margin-top 0
 
         &--small + &--small
             margin-top 17px
@@ -336,12 +342,14 @@ init($breakpoints, $columns)
         display flex
         justify-content center
         align-items center
-        background url('../images/clients-line-bg.png') no-repeat
         height 121px
         padding-left 10px
 
-    &__element-first
-        background none
+        @media (min-width: $breakpoints['md'])
+            background url('../images/clients-line-bg.png') no-repeat
+
+        &-first
+            background none
 
 .ui-mounting
     font-family 'Panton'
@@ -543,23 +551,41 @@ init($breakpoints, $columns)
     display block
     margin-top 65px
 
+    & .row
+        @media (min-width: $breakpoints['xl'])
+            flex-wrap nowrap
+
     & .col
-        transition width .2s ease
+        transition width .2s ease-out
         cursor pointer
 
+        @media (min-width: $breakpoints['xl'])
+            width 25%
+
         &:hover
-            width 50%
+            width 100%
             flex none
 
-            & ^[0]__content
-                padding 11px 96px 14px 33px
-                width 100%
-                height auto
-                visibility visible
+            @media (min-width: $breakpoints['lg'])
+                width 50%
 
             & ^[0]__item
-                background #009ba4
+                background-color #009ba4
                 color #fff
+
+            & ^[0]__content
+                padding 11px 72px 14px 20px
+                width 100%
+                visibility visible
+                max-height 124px
+                opacity 1
+
+                @media (min-width: $breakpoints['xl'])
+                    padding 11px 96px 14px 33px
+
+            & ^[0]__link
+                opacity 1
+                transition-delay 0s
 
             & ^[0]__header
                 border-color #fff
@@ -571,11 +597,6 @@ init($breakpoints, $columns)
                     color #fff
                     fill #fff
 
-            & ^[0]__text
-                display block
-                height 100%
-                visibility visible
-
     &__item
         display flex
         position relative
@@ -585,15 +606,25 @@ init($breakpoints, $columns)
         padding 10px 0
         align-items center
         justify-content center
+        margin-top 15px
+        transition background-color .2s ease
+
+        @media (min-width: $breakpoints['xl'])
+            margin-top 0
 
     &__header
-        font-size 26px
+        font-size 20px
         line-height 22px
         display flex
         flex-direction column
         align-items center
-        padding 9px 39px 1px 43px
+        padding 9px 20px 1px 20px
         border-right 2px solid transparent
+        transition border-color .2s ease
+
+        @media (min-width: $breakpoints['xl'])
+            padding 9px 39px 1px 43px
+            font-size 26px
 
     &__icon
         height 78px
@@ -603,6 +634,8 @@ init($breakpoints, $columns)
         display flex
         align-items center
         justify-content center
+        max-height 149px
+        overflow hidden
 
         svg
             color $color-darkcoral
@@ -614,19 +647,22 @@ init($breakpoints, $columns)
         position absolute
         bottom 0
         right 0
+        opacity 0
+        transition opacity .2s linear .15s
 
     &__content
         padding 0
         width 0
+        max-height 0
         overflow hidden
-        visibility hidden
+        opacity 0
+        transition opacity .2s linear .15s
 
     &__text
-        display none
-        overflow hidden
-        visibility hidden
-        height 0
-        font-size 18px
+        font-size 16px
+
+        @media (min-width: $breakpoints['xl'])
+            font-size 18px
 
     &__title
         padding-top 15px
@@ -717,6 +753,7 @@ init($breakpoints, $columns)
 .ui-catalog-interactives
     background url('../images/catalog-interactives-bg.png') no-repeat 50% 50%
     padding-top 45px
+    position relative
 
     &__title
         font-family 'Panton'
@@ -734,18 +771,15 @@ init($breakpoints, $columns)
         padding-top 82px
 
     &__img
-        display none
+        display block
+        padding-top 22px
 
         @media (min-width: $breakpoints['lg'])
-            display block
+            padding-top 0
+
 
 .ui-main-home
     background url('../images/main-home-bg.png') no-repeat 50% 50%
-
-.ui-catalog
-
-    &__line
-        padding 15px 0
 
 .ui-price-calculate
     padding-top 44px
@@ -822,6 +856,7 @@ init($breakpoints, $columns)
         background-position 50% 50%
         background-repeat no-repeat
         background-size cover
+        min-height 250px
 
     &__line
         padding 0 0 22px 0
@@ -1083,5 +1118,13 @@ init($breakpoints, $columns)
         background-position 50% 50%
         height 234px
         width 100%
+
+.ui-canvas
+    position absolute
+    width 100%
+    height 100%
+    z-index -1
+    left 0
+    top 0
 
 @import 'catalog-detail';
