--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -37,6 +37,12 @@
         padding-top 28px
         padding-bottom 22px
 
+        .ui-input
+            margin-bottom 15px
+
+            @media (min-width: $breakpoints['md'])
+                margin-bottom 0
+
     &__title
         font-size 26px
         line-height 32px
@@ -102,13 +108,14 @@
         font-size 26px
         color #ffffff
         line-height 32px
-        padding-bottom 27px
+        padding-bottom 15px
 
     &__description
         font-family 'Rubik'
         font-size 16px
         color #fafafa
         line-height 20px
+        padding 12px 0
 
     input
         margin-bottom 16px
