--- a/frontend/src/catalog/mobile/index.jade
+++ b/frontend/src/catalog/mobile/index.jade
@@ -11,14 +11,14 @@ block content
                 .col.col--xl-12
                     h1.ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black ЦельноСтеклянные перегородки
             .row
-                .col.col--xl-4
+                .col.col--xl-4.col--lg-6
                     .ui-catalog-detail-info
                         .ui-catalog-detail-info__header
                             .ui-catalog-detail-info__title Технические характеристики
                             .ui-catalog-detail-info__params
                                 .grid
                                     .row
-                                        .col.col--xl-6.col--no-gutter-right
+                                        .col.col--xl-6.col--lg-6.col--md-6.col--md-no-gutter-right
                                             .ui-catalog-detail-info__param
                                                 i
                                                     svg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 21.92 21.92", width="27", height="27")
@@ -29,7 +29,7 @@ block content
                                                         rect(fill="#fff", x="7.6", y="7.96", width="1.42", height="8.58", transform="translate(6.27 27.53) rotate(-135)")
 
                                                 span Высота - до 2 000мм #[br] Ширина - 32 мм
-                                        .col.col--xl-6
+                                        .col.col--xl-6.col--lg-6.col--md-6
                                             .ui-catalog-detail-info__param
                                                 i
                                                     svg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 79.82 75.55", width="25", height="25")
@@ -45,18 +45,18 @@ block content
                         .ui-catalog-detail-variants__list
                             .grid
                                 .row
-                                    .col.col--xl-4.col--xl-align-center.ui-catalog-detail-variants__item
+                                    .col.col--xl-4.col--lg-4.col--md-4.col--xl-align-center.ui-catalog-detail-variants__item
                                         span Матовое стекло
-                                    .col.col--xl-4.col--xl-align-center.ui-catalog-detail-variants__item
+                                    .col.col--xl-4.col--lg-4.col--md-4.col--xl-align-center.ui-catalog-detail-variants__item
                                         span Прозрачное стекло
-                                    .col.col--xl-4.col--xl-align-center.ui-catalog-detail-variants__item
+                                    .col.col--xl-4.col--lg-4.col--md-4.col--xl-align-center.ui-catalog-detail-variants__item
                                         span Тонированное стекло
                         .ui-catalog-detail-variants__content
                             .grid
                                 .row
-                                    .col.col--xl-6.col--xl-align-center
+                                    .col.col--xl-6.col--lg-6.col--md-6.col--xl-align-center
                                         .ui-catalog-detail-variants__price от 3600 руб/м2
-                                    .col.col--xl-6.ui-catalog-detail-variants__button
+                                    .col.col--xl-6.col--lg-6.col--md-6.ui-catalog-detail-variants__button
                                         a.ui-button.ui-button--size-lg.ui-button--block.ui-button--black Заказать
                                 .row
                                     .col.col--xl-12.ui-catalog-detail-variants__footer
@@ -65,23 +65,23 @@ block content
                                             .row
                                                 .col.col--xl-12.ui-catalog-detail-variants__total Итоговая цена зависит от:
                                             .row
-                                                .col.col--xl-4
+                                                .col.col--xl-4.col--lg-4.col--md-4
                                                     span 
                                                         i +
                                                         div объема
-                                                .col.col--xl-4
+                                                .col.col--xl-4.col--lg-4.col--md-4
                                                     span 
                                                         i +
                                                         div материалов
-                                                .col.col--xl-4
+                                                .col.col--xl-4.col--lg-4.col--md-4
                                                     span 
                                                         i +
                                                         div количества поворотных элементов
 
-                .col.col--xl-6
+                .col.col--xl-6.col--lg-6.col--lg-flex.col--lg-align-center
                     .ui-catalog-detail__image
                         img.ui-image.ui-image--responsive(src="/images/catalog/mobile/model-main.png", alt="")
-                .col.col--xl-2.col--xs-align-center
+                .col.col--xl-2.col--lg-12.col--xs-align-center
                     .ui-catalog-detail__models
                         .ui-product-model
                             .grid.grid--no-gutters
@@ -102,45 +102,48 @@ block content
                                         img.ui-image.ui-image--responsive(src="/images/catalog/mobile/model-main.png", alt="")
                                     .col.col--xl-6.col--no-gutters.col--xs-align-center.ui-product-model__name Модель 1
     
-    .grid.grid--container.ui-catalog-seo
-        .row
-            .col.col--xl-12.ui-catalog-seo__heading
-                h2.ui-heading.ui-heading--lvl4.ui-heading--black Описание
-        .row
-            .col.col--xl-auto.ui-catalog-seo__text
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-                p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
-                p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
-                p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
-            .col.col--xl-auto
-                a.ui-icon-button.ui-icon-button--size-lg.ui-icon-button--black
-                    .ui-icon-button__icon 
-                        svg(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", width="16px", height="8px")
-                            path(fill-rule="evenodd",  fill="rgb(249, 249, 249)", d="M8.000,7.998 L-0.001,0.001 L16.000,0.001 L8.000,7.998 Z")
-                    .ui-icon-button__text Смотреть подробнее
+    .grid.grid--container.grid--no-gutters.ui-catalog-seo
+        .row.row--no-gutters
+            .col.col--xl-12
+                .grid.ui-catalog-seo__content
+                    .row.row--no-gutters
+                        .col.col--xl-12.ui-catalog-seo__heading
+                            h2.ui-heading.ui-heading--lvl4.ui-heading--black Описание
+                    .row.row--no-gutters
+                        .col.col--xl-auto.col--md-auto.ui-catalog-seo__text
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                            p Стационарные перегородки Oki-Doki Ice - это утонченное сочетание Легкости и света. 
+                            p Данная система перегородок не содержит каркаса, для крепления стёкол используется элегантные решения утонченных профилей. 
+                            p Надежность,  прочность и эстетичность конструкции  - главное и неоспоримое преимущество перегородок Oki-Doki Ice.
+                        .col.col--xl-auto.col--md-auto
+                            a.ui-icon-button.ui-icon-button--size-lg.ui-icon-button--black.js-seo-text-toggle
+                                .ui-icon-button__icon 
+                                    svg(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", width="16px", height="8px")
+                                        path(fill-rule="evenodd",  fill="rgb(249, 249, 249)", d="M8.000,7.998 L-0.001,0.001 L16.000,0.001 L8.000,7.998 Z")
+                                .ui-icon-button__text Смотреть подробнее
 
     .ui-price-calculate.grid.grid--container
         .row
             .col.col--xl-12
                 .grid
                     form.row.row--no-gutters.ui-form.ui-form-calcalate.ui-form--red
-                        .col.col--xl-3.ui-form-calcalate__header
+                        .col.col--xl-3.col--lg-3.ui-form-calcalate__header
                             .ui-form-calcalate__title Оставить заявку
                             .ui-form-calcalate__description Оставьте заявку на расчет стоимости и мы свяжемся с вами в ближайшее время
-                        .col.col--xl-9
+                        .col.col--xl-9.col--lg-9
                             .ui-form-calcalate__content
                                 .grid
                                     .row
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             input.ui-input.ui-input--block(type="text", placeholder="Телефон")
-                                        .col.col--xl-4
+                                        .col.col--xl-4.col--lg-4.col--md-4
                                             a.ui-button.ui-button--size-lg.ui-button--block.ui-button--black Расчитать стоимость
                                 .ui-form-calcalate__about 
                                     .ui-form-calcalate__icon !
@@ -159,9 +162,9 @@ block content
                 .col.col--xl-12.owl-carousel.owl-theme.js-works-carousel
                     .grid
                         .row.row--no-gutters
-                            .col.col--xl-8.col--no-gutters(style="padding: 29px 0")
+                            .col.col--xl-8.col--lg-7.col--md-6.col--no-gutters(style="padding: 29px 0")
                                 .ui-product-works__image(style="background-image: url(/images/celnostekljannye-peregorodki-bg-1.png)")
-                            .col.col--xl-4.col--no-gutters.ui-product-works__content
+                            .col.col--xl-4.col--lg-5.col--md-6.col--no-gutters.ui-product-works__content
                                 .ui-product-works__title Название заказчика
                                 .ui-product-works__text Краткое описание:
                                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -169,9 +172,9 @@ block content
                                     
                     .grid
                         .row.row--no-gutters
-                            .col.col--xl-8.col--no-gutters(style="padding: 25px 0")
+                            .col.col--xl-8.col--lg-7.col--md-6.col--no-gutters(style="padding: 25px 0")
                                 .ui-product-works__image(style="background-image: url(/images/celnostekljannye-peregorodki-bg-1.png)")
-                            .col.col--xl-4.col--no-gutters.ui-product-works__content
+                            .col.col--xl-4.col--lg-5.col--md-6.col--no-gutters.ui-product-works__content
                                 .ui-product-works__title Название заказчика
                                 .ui-product-works__text Краткое описание:
                                     | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -294,19 +297,19 @@ block content
                 .col.col--xl-12
                     .ui-companies__header Нас выбирают
             .row.row--xl-center.ui-companies-list
-                .col.col--xl-4.col--no-gutters 
+                .col.col--xl-4.col--lg-4.col--no-gutters 
                     .ui-companies__title С нами работает 
                         span более 5000 
                         |#{' '} компаний
-                .col.col--xl-2
+                .col.col--xl-2.col--lg-2.col--md-3
                     .ui-companies__element.ui-companies__element-first
-                        img(src="/images/companies/resch-logo.png")
-                .col.col--xl-2
+                        img.ui-image.ui-image--responsive(src="/images/companies/resch-logo.png")
+                .col.col--xl-2.col--lg-2.col--md-3
                     .ui-companies__element
-                        img(src="/images/companies/rgd-logo.png")
-                .col.col--xl-2
+                        img.ui-image.ui-image--responsive(src="/images/companies/rgd-logo.png")
+                .col.col--xl-2.col--lg-2.col--md-3
                     .ui-companies__element
-                        img(src="/images/companies/nord-strean-logo.png")
-                .col.col--xl-2
+                        img.ui-image.ui-image--responsive(src="/images/companies/nord-strean-logo.png")
+                .col.col--xl-2.col--lg-2.col--md-3
                     .ui-companies__element
-                        img(src="/images/companies/viscom.png")
+                        img.ui-image.ui-image--responsive(src="/images/companies/viscom.png")
