--- a/frontend/src/_styles/catalog-detail.styl
+++ b/frontend/src/_styles/catalog-detail.styl
@@ -3,10 +3,16 @@
     padding-bottom 105px
 
     &__models
-        display block
+        display flex
+        margin-top 25px
+
+        @media (min-width: $breakpoints['xl'])
+            display block
+            margin-top 0
 
     &__image
         text-align center
+        flex 1
         background linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 6%, #fff 6%, #fff 94%, rgba(255, 255, 255, 0) 94%, rgba(255, 255, 255, 0) 100%)
 
 .ui-catalog-detail-info
@@ -72,7 +78,7 @@
 
     &__content
         background #e5e5e5
-        padding 12px
+        padding 12px 15px
 
     &__price
         font-size 26px
@@ -120,7 +126,10 @@
 
 .ui-catalog-seo
     margin-top -60px
-    box-shadow 0px 3px 10px 0px rgba(0, 0, 0, .1)
+
+    &__content
+        box-shadow 0px 3px 10px 0px rgba(0, 0, 0, .1)
+        padding-bottom 28px
 
     &__heading
         padding-top 28px
@@ -143,6 +152,10 @@
     box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
     color $color-dark
     cursor pointer
+    max-width 25%
+
+    @media (min-width: $breakpoints['xl'])
+        max-width 100%
 
     &__image
         text-align center
@@ -158,7 +171,11 @@
 
 
 .ui-product-model + .ui-product-model
-    margin-top 12px
+    margin-left 12px
+
+    @media (min-width: $breakpoints['xl'])
+        margin-top 12px
+        margin-left 0
 
 .ui-works
     padding-bottom 75px
@@ -193,19 +210,28 @@
 
     &__nav
         position absolute
-        bottom 0
+        bottom -50px
         left 15px
         z-index 11
         display flex
+        width calc(100% - 30px)
+
+        @media (min-width: $breakpoints['md'])
+            width auto
+            bottom 0
 
         a
             font-size 16px
             font-weight bold
             display block
-            width 250px
+            width 100%
             text-align center
             padding 19px 15px 20px
             text-transform uppercase
+
+            @media (min-width: $breakpoints['md'])
+                width 250px
+
     &__next
         color #212121
         background #e5e5e5
