--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -50,18 +50,44 @@ body.ui-page
                     nav.ui-menu.col.col--xl-10.col--xl-flex.col--lg-flex
                       .ui-menu__item
                           a.ui-menu__link(href="/catalog/") Каталог
+                          .ui-menu__sublevel
+                              a.ui-menu__sublevel-item Мобильные перегородки
+                              a.ui-menu__sublevel-item Стационарные перегородки
+                              a.ui-menu__sublevel-item Лёгкие эконом-перегородки
+                              a.ui-menu__sublevel-item Cтеклянные перегородки
+                              a.ui-menu__sublevel-item Офисная мебель
+                              a.ui-menu__sublevel-item Двери
+                              a.ui-menu__sublevel-item Входные группы
+                              a.ui-menu__sublevel-item Стеклянные двери
+                              a.ui-menu__sublevel-item Сантехнические перегородки
                       .ui-menu__item
                           a.ui-menu__link(href="/configurations/") Конфигурации
                       .ui-menu__item
                           a.ui-menu__link(href="/service/") Сервис
+                          .ui-menu__sublevel
+                              a.ui-menu__sublevel-item Запрос менеджеру
+                              a.ui-menu__sublevel-item Этапы работы
+                              a.ui-menu__sublevel-item(href="/service/regions/") Работа с регионами
+                              a.ui-menu__sublevel-item Гаранитийное и послегарантийное обслуживание
+                              a.ui-menu__sublevel-item(href="/service/terms-for-assembly/") Условия, необходимые для монтажа
+                              a.ui-menu__sublevel-item(href="/service/certificates/") Сертификаты
                       .ui-menu__item
                           a.ui-menu__link(href="/projects/") Проекты
+                          .ui-menu__sublevel
+                              a.ui-menu__sublevel-item(href="/projects/history/") Истории проектов
+                              a.ui-menu__sublevel-item Отчеты клиентов
+                              a.ui-menu__sublevel-item Отзывы
+                              a.ui-menu__sublevel-item(href="/gallery/") Фотогалерея
                       .ui-menu__item
                           a.ui-menu__link(href="") Цены
                       .ui-menu__item
                           a.ui-menu__link(href="") Направления
                       .ui-menu__item
                           a.ui-menu__link(href="/about/") О компании
+                          .ui-menu__sublevel
+                              a.ui-menu__sublevel-item(href="/about/jobs/") Вакансии
+                              a.ui-menu__sublevel-item(href="/about/press/") Статьи
+                              a.ui-menu__sublevel-item Представительства
                       .ui-menu__item
                           a.ui-menu__link(href="") Дилерам
                       .ui-menu__item
